--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -2,12 +2,15 @@
 server.port=8082
 
 # Data Source Setup, see: DataSourceConfig class
-
 #Initialization
+spring.datasource.url=jdbc:mysql://192.168.56.101/udacity?serverTimezone=UTC
+spring.datasource.username=emerson
+spring.datasource.password=emerson
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # uncomment the below lines to view sql output in console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
